--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,153 +1,67 @@
 version: 2.1
 
+workflows:
+  version: 2
+  build_deploy:
+    jobs:
+      - build
+      - test
+      - package:
+          requires:
+            - build
+            - test
+      - deploy:
+          requires:
+            - package
 
-  orbs:
-    slack: circleci/slack@4.10.1
+jobs:
+  build:
+    docker:
+      - image: gradle:alpine
+    steps:
+      - checkout
+      - run: ./gradlew bootJar
+      - persist_to_workspace:
+          root: ./
+          paths:
+            - build/
 
-  #commands:
-  #  notify_slack_error:
-  #    steps:
-  #      - slack/notify:
-  #          channel: 'notification-circleci-demo'
-  #          event: fail
-  #          template: basic_fail_1
-  #
-  #  notify_slack_pass:
-  #    steps:
-  #      - slack/notify:
-  #          channel: 'notification-circleci-demo'
-  #          event: pass
-  #          template: basic_pass_1
+  test:
+    docker:
+      - image: gradle:alpine
+    steps:
+      - checkout
+      - run: ./gradlew test
+      - store_test_results:
+          path: build/test-results
 
+  package:
+    docker:
+      - image: docker:dind
+    steps:
+      - setup_remote_docker:
+          version: 19.03.13
+      - checkout
+      - attach_workspace:
+          at: ./
+      - run: docker build --iidfile image.txt -t registry.heroku.com/$HEROKU_APP_NAME/web:${CIRCLE_SHA1} .
+      - run: docker login --username=_ --password=$HEROKU_TOKEN registry.heroku.com
+      - run: docker push registry.heroku.com/$HEROKU_APP_NAME/web:${CIRCLE_SHA1}
+      - persist_to_workspace:
+          root: ./
+          paths:
+            - image.txt
 
-  workflows:
-    version: 2
-    build_deploy:
-      jobs:
-        - build
-        - test
-  #      - package:
-  #          requires:
-  #            - build
-  #            - test
-  #      - deploy:
-  #          requires:
-  #            - package
-  #      - qa:
-  #          requires:
-  #            - build
-  #            - test
-  #            - package
-  #
-  #      - hold:
-  #          type: approval
-  #          requires:
-  #            - qa
-  #
-  #      - production:
-  #          requires:
-  #            - hold
-
-
-
-  jobs:
-    build:
-      docker:
-        - image: gradle:alpine
-      steps:
-        - checkout
-        - run: ./gradlew bootJar
-        - run: apk add --no-cache curl
-        - run: apk add --no-cache jq httpie
-        - persist_to_workspace:
-            root: ./
-            paths:
-              - build/
-        - run: notify_slack_error
-        - run: notify_slack_pass
-
-    test:
-      docker:
-        - image: gradle:alpine
-      steps:
-        - checkout
-        - run: ./gradlew test
-        - run: apk add --no-cache curl
-        - run: apk add --no-cache jq httpie
-        - store_test_results:
-            path: build/test-results
-        - notify_slack_error
-        - notify_slack_pass
-
-  #  package:
-  #    docker:
-  #      - image: docker:dind
-  #    steps:
-  #      - setup_remote_docker:
-  #          version: 19.03.13
-  #      - checkout
-  #      - attach_workspace:
-  #          at: ./
-  #      - run: apk add --no-cache curl
-  #      - run: apk add --no-cache jq httpie
-  #      - run: docker build --iidfile image.txt -t registry.heroku.com/$HEROKU_APP_NAME/web:${CIRCLE_SHA1} .
-  #      - run: docker login --username=_ --password=$HEROKU_TOKEN registry.heroku.com
-  #      - run: docker push registry.heroku.com/$HEROKU_APP_NAME/web:${CIRCLE_SHA1}
-  #      - persist_to_workspace:
-  #          root: ./
-  #          paths:
-  #            - image.txt
-  #      - notify_slack_error
-  #      - notify_slack_pass
-  #
-  #  deploy:
-  #    docker:
-  #      - image: docker:dind
-  #    steps:
-  #      - setup_remote_docker:
-  #          version: 19.03.13
-  #      - attach_workspace:
-  #          at: ./
-  #      - run: apk add --no-cache curl
-  #      - run: apk add --no-cache jq httpie
-  #      - run:
-  #          name: "Deploy container"
-  #          command: |
-  #            curl -X PATCH https://api.heroku.com/apps/$HEROKU_APP_NAME/formation --header "Content-Type: application/json" --header "Accept: application/vnd.heroku+json; version=3.docker-releases" --header "Authorization: Bearer ${HEROKU_TOKEN}" --data '{ "updates": [ { "type": "web", "docker_image": "'$(cat image.txt)'" } ] }'
-  #      - notify_slack_error
-  #      - notify_slack_pass
-  #
-  #  qa:
-  #    docker:
-  #      - image: docker:dind
-  #    steps:
-  #      - setup_remote_docker:
-  #          version: 19.03.13
-  #      - attach_workspace:
-  #          at: ./
-  #      - run: apk add --no-cache curl
-  #      - run: apk add --no-cache jq httpie
-  #      - run:
-  #          name: "Deploy container"
-  #          command: |
-  #            curl -X PATCH https://api.heroku.com/apps/$HEROKU_APP_NAME/formation --header "Content-Type: application/json" --header "Accept: application/vnd.heroku+json; version=3.docker-releases" --header "Authorization: Bearer ${HEROKU_TOKEN}" --data '{ "updates": [ { "type": "web", "docker_image": "'$(cat image.txt)'" } ] }'
-  #      - notify_slack_error
-  #      - notify_slack_pass
-  #
-  #
-  #  production:
-  #    docker:
-  #      - image: docker:dind
-  #    steps:
-  #      - setup_remote_docker:
-  #          version: 19.03.13
-  #      - attach_workspace:
-  #          at: ./
-  #      - run: apk add --no-cache curl
-  #      - run: apk add --no-cache jq httpie
-  #      - run:
-  #          name: "Deploy container"
-  #          command: |
-  #            curl -X PATCH https://api.heroku.com/apps/$HEROKU_APP_NAME/formation --header "Content-Type: application/json" --header "Accept: application/vnd.heroku+json; version=3.docker-releases" --header "Authorization: Bearer ${HEROKU_TOKEN}" --data '{ "updates": [ { "type": "web", "docker_image": "'$(cat image.txt)'" } ] }'
-  #      - notify_slack_error
-  #      - notify_slack_pass
+  deploy:
+    docker:
+      - image: docker:dind
+    steps:
+      - setup_remote_docker:
+          version: 19.03.13
+      - attach_workspace:
+          at: ./
+      - run: apk add --no-cache curl
+      - run:
+          name: "Deploy container"
+          command: |
+            curl -X PATCH https://api.heroku.com/apps/$HEROKU_APP_NAME/formation --header "Content-Type: application/json" --header "Accept: application/vnd.heroku+json; version=3.docker-releases" --header "Authorization: Bearer ${HEROKU_TOKEN}" --data '{ "updates": [ { "type": "web", "docker_image": "'$(cat image.txt)'" } ] }'
